Changed Styling, added About Page, Fixed Clipping Mask

--- a/public/about.css
+++ b/public/about.css
@@ -4,7 +4,8 @@ body{
 }
 .header{
     background-color: rgb(183, 146, 104);
-    color:rgb(78, 105, 26);
+    -webkit-text-stroke: 2px black;
+    color: rgb(78, 105, 26);
     padding:5px;
     text-align:center;
     font-family:sans-serif;
@@ -13,6 +14,8 @@ body{
 
 .nav-bar{
     background-color: rgb(78, 105, 26);
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     color:rgb(183, 146, 104);
     padding:5px;
     text-align:center;
@@ -21,7 +24,8 @@ body{
 }
 .nav-item a:hover, a:visited, a:link, a:active{
     text-decoration: none;
-    color:rgb(183, 146, 104);
+    -webkit-text-stroke: 1px black;
+    color: rgb(183, 146, 104);
     margin:5px;
     font-size:18px;
     padding:10px;
@@ -43,6 +47,8 @@ body{
     margin-right: 200px;
     margin-left: 200px;
     text-align: center;
+    -webkit-text-stroke: 2px black;
+    color: rgb(183, 146, 104);
     font-family: sans-serif;
 }
 
