--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,8 @@ body{
 }
 .header{
     background-color: rgb(183, 146, 104);
-    color:rgb(78, 105, 26);
+    -webkit-text-stroke: 2px black;
+    color: rgb(78, 105, 26);
     padding:5px;
     text-align:center;
     font-family:sans-serif;
@@ -13,6 +14,8 @@ body{
 
 .nav-bar{
     background-color: rgb(78, 105, 26);
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     color:rgb(183, 146, 104);
     padding:5px;
     text-align:center;
@@ -21,6 +24,7 @@ body{
 }
 .nav-item a:hover, a:visited, a:link, a:active{
     text-decoration: none;
+    -webkit-text-stroke: 1px black;
     color:rgb(183, 146, 104);
     margin:5px;
     font-size:18px;
